[project]
name = "parallelbo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.15"
dependencies = ["torch (>=2.9.0,<3.0.0)", "matplotlib (>=3.10.7,<4.0.0)", "botorch (>=0.16.0,<0.17.0)", "gpytorch (>=1.14.2,<2.0.0)", "ipykernel (>=7.1.0,<8.0.0)", "importlib (>=1.0.4,<2.0.0)"]
